[gd_scene load_steps=24 format=3 uid="uid://br0jpb6yth144"]

[ext_resource type="Texture2D" uid="uid://bxirq7eqdu5f0" path="res://ui/icons/icon_add.svg" id="1_3snf8"]
[ext_resource type="Script" path="res://ui/views/editor/toolbar/toolbar.gd" id="1_nv6t2"]
[ext_resource type="Texture2D" uid="uid://bbg71ievy0kx" path="res://ui/icons/icon_save.svg" id="2_on6in"]
[ext_resource type="Script" path="res://ui/common/auto_scale.gd" id="3_gyhtf"]
[ext_resource type="Texture2D" uid="uid://cohkmijvmeouk" path="res://ui/icons/icon_replay.svg" id="3_hmxyg"]
[ext_resource type="Texture2D" uid="uid://bdx3oqvp7340c" path="res://ui/icons/icon_sidebar.svg" id="4_kshbb"]
[ext_resource type="Texture2D" uid="uid://bl2t1v7qwrcrp" path="res://ui/icons/icon_inspector.svg" id="5_gt8pn"]
[ext_resource type="Texture2D" uid="uid://cyxvkdaei4jjn" path="res://ui/icons/icon_graphedit.svg" id="6_efu6l"]
[ext_resource type="Texture2D" uid="uid://brg4xdyhcs4vt" path="res://ui/icons/icon_viewport.svg" id="7_8e4pu"]

[sub_resource type="InputEventAction" id="InputEventAction_h3goc"]
action = &"add_node"

[sub_resource type="Shortcut" id="Shortcut_7a4a0"]
events = [SubResource("InputEventAction_h3goc")]

[sub_resource type="InputEventAction" id="InputEventAction_kncu0"]
action = &"rebuild"

[sub_resource type="Shortcut" id="Shortcut_u82ac"]
events = [SubResource("InputEventAction_kncu0")]

[sub_resource type="InputEventAction" id="InputEventAction_j4vte"]
action = &"save"

[sub_resource type="Shortcut" id="Shortcut_t10ax"]
events = [SubResource("InputEventAction_j4vte")]

[sub_resource type="InputEventAction" id="InputEventAction_c5p7s"]
action = &"toggle_sidebar"

[sub_resource type="Shortcut" id="Shortcut_qvlb1"]
events = [SubResource("InputEventAction_c5p7s")]

[sub_resource type="InputEventAction" id="InputEventAction_2xh30"]
action = &"toggle_inspector"

[sub_resource type="Shortcut" id="Shortcut_5mcor"]
events = [SubResource("InputEventAction_2xh30")]

[sub_resource type="InputEventAction" id="InputEventAction_uqlvn"]
action = &"toggle_graph_editor"

[sub_resource type="Shortcut" id="Shortcut_noixo"]
events = [SubResource("InputEventAction_uqlvn")]

[sub_resource type="InputEventAction" id="InputEventAction_t5j78"]
action = &"toggle_viewport"

[sub_resource type="Shortcut" id="Shortcut_03n1u"]
events = [SubResource("InputEventAction_t5j78")]

[node name="Toolbar" type="VBoxContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
script = ExtResource("1_nv6t2")

[node name="AutoScale" type="Node" parent="."]
script = ExtResource("3_gyhtf")
targets = 1

[node name="Create" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Add node"
focus_mode = 0
shortcut = SubResource("Shortcut_7a4a0")
icon = ExtResource("1_3snf8")
icon_alignment = 1
expand_icon = true

[node name="Rebuild" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Rebuild"
focus_mode = 0
shortcut = SubResource("Shortcut_u82ac")
icon = ExtResource("3_hmxyg")
icon_alignment = 1
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Save" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Save current graph"
focus_mode = 0
shortcut = SubResource("Shortcut_t10ax")
icon = ExtResource("2_on6in")
icon_alignment = 1
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="ToggleGraphInspector" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Toggle graph inspector"
focus_mode = 0
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_qvlb1")
icon = ExtResource("4_kshbb")
icon_alignment = 1
expand_icon = true

[node name="ToggleNodeInspector" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Toggle node inspector"
focus_mode = 0
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_5mcor")
icon = ExtResource("5_gt8pn")
icon_alignment = 1
expand_icon = true

[node name="ToggleGraphEditor" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Toggle graph editor"
focus_mode = 0
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_noixo")
icon = ExtResource("6_efu6l")
icon_alignment = 1
expand_icon = true

[node name="ToggleViewport" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Toggle 3D viewport"
focus_mode = 0
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_03n1u")
icon = ExtResource("7_8e4pu")
icon_alignment = 1
expand_icon = true
